# CodingPlayground

./: .gitignore  CMakeLists.txt  README.md
c/ansi_color/: .gitignore  AnsiColorCodes.h  hello_color.c
c/compression/: CMakeLists.txt  hello_brotli.c  hello_zstandard.c
c/crypto/: CMakeLists.txt  nacl_verify.c
cpp/zlog/: .gitignore  Makefile  t_zlog.cpp  zlog.conf
dataquest/: README.md
dataquest/APIs_and_Web_Scraping/: github_api.py  iss_api.py  reddit_api.py  web_scraping.py
dataquest/DataCleaning/: Analyzing_NYC_High_School_Data.ipynb  Star_Wars_Survey.ipynb  cleaning_walkthrough.py
dataquest/DataFrame/: fandango_dataframes.py
dataquest/DataVisualiation/: Customizing_Data_Visualizations.ipynb  Pixar_Movies.ipynb  Police_Killings.ipynb  basic_plotitng.py  data_exploration.py  geographic_data.py  hollywood_challenge.py  matplotlib_internals.py  seaborn_viz.py
dataquest/JupyterNotebook/: Basics.ipynb
dataquest/SQL_and_Databases/: Preparing_Data_for_SQLite.ipynb  SQLite_Relations.ipynb  area.py  data_exploration.py  growth.py  modifying_data.py  next_steps.py  query.py  querying_sqlite.py  statistics_by_group.py  summary_statistics.py
dataquest/Series/: movie_critics.py
dataquest/Statistics/: Jeopardy.ipynb  descriptive_statistics.py
dataquest/SummarizingData/: college-majors.py
dataquest/data/: airlines.csv  airports.csv  births.csv  jobs.db  routes.csv
javascript/vis.js/: basicUsage.html
python/: .gitignore
python/StringIO/: stringio_test.py
python/argparse/: my_program.py  prog.py
python/assert/: assert_test.py
python/aws-requests/: describe_vpcs.py  http_aws.py
python/click/: click-repl.py  hello_click.py
python/cmd/: DemoApp.py  Readme.txt  auto_completion.py  cmd_argv.py  cmd_attributes.py  cmd_do_shell.py  cmd_file.py  hello_cmd.py  live_help.py  my_prompt.py  override_base.py  script.txt  use_rawinput.py
python/cmd2/: BaseCmd2.py  CmdLineApp.py  ColorPrompt.py  DemoApp.py  DictionaryApp.py  EnableIpython.py  Integrate_Cmd2_Into_Event_Loops.py  Readme.txt  SelectExample.py  Shortcuts.py  exampleSession.txt  script.txt
python/colorama/: hello_color.py
python/compression/: hello_brotli.py  hello_zstandard.py
python/cross_module/: b.py  c.py
python/crypto/: .gitignore  ed25519_genkey.py  ed25519_sign.py  ed25519_verify.py  nacl_genkey.py  nacl_sign.py  nacl_verify.py
python/dictionary_challenge/: Readme.md  dictionary_challenge.py
python/embedding_python/: embedded_ipython.py  interactive_console.py  start_ipython.py
python/exception/: should_throw.py
python/format/: process_list.py
python/ipython/: embedded_ipython.py
python/logging/: logging_to_file.py  simple_logging.py
python/lxml/: hello_lxml.py
python/magic/: Pipfile
python/matplotlib/: matplotlib_3d.py  vertical_line.py
python/module/: A.py  B.py
python/natsort/: Pipfile
python/networkx/: .gitignore  2 using Networkx to Explore Pathfinding Specific Graphs.ipynb  Networkx_Basics.ipynb  addHealth81.txt  directory_structure.py  edge_color.py  networkx_to_json.py
python/optparse/: optparse_example.py  optparse_trivial.py
python/pandas_color/: Pandas_HTML_with_Color.ipynb  pandas_color.py
python/pandas_html/: pandas_html_table.py
python/pluggy/: hello_pluggy.py
python/prompt-toolkit/: auto_suggestion.py  autocompletion.py  bottom_toolbar.py  coloring_prompt.py  colors.py  custom_completer.py  hello_world.py  history.py  input_validation.py  printing_color.py  pygments_style.py  syntax_highlighting.py
python/pty/: pty_example.py
python/pycon2017/: PyCon2017.ipynb  greeting.py
python/pytest/: myprogram.py  test_myprogram.py
python/regex_pandas_html/: mytable.html  regex_pandas_html.py  wm.txt
python/shlex/: shelx_split.py
python/sqlalchemy/: sqlalchemy_postgres.py  sqlalchemy_sqlite.py
python/subprocess/: get_subproc_result.py  pipe_input.py
python/threading/: thread_queue.py
python/yapsy/: hello_yapsy.py
(+53 files in other folders)
